# cpp-piek-attendance

./: .gitignore  .gitmodules  CMakeLists.txt
include/: DataLogger.hpp  GQLTransmitter.hpp  dataPreparation.hpp  types.hpp  utils.hpp
src/: CMakeLists.txt  DataLogger.cpp  Employee.cpp  GQLTransmitter.cpp  dataPreparation.cpp  main.cpp  utils.cpp
